--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "A Redis UI in your terminal"
 authors = ["Eli Cohen <amihai.cohen@gmail.com>"]
 keywords = ["redis", "tui", "redis-client", "redisamp", "redis-ui", "textual"]
 homepage = "https://github.com/elicore/redisamp"
+repository = "https://github.com/elicore/redisamp"
 license = "MIT"
 readme = "README.md"
 classifiers = [
@@ -31,16 +32,16 @@ classifiers = [
 redisamp = "redisamp.main:main"
 
 [tool.poetry.dependencies]
-python = ">=3.10"
-redis = ">4.3.4"
-textual = {extras = ["dev"], version = "^0.27.0"}
+python = ">=3.10,<4.0"
+redis = "^5.0.0"
+textual = {extras = ["dev"], version = "^0.37.0"}
 walrus = "^0.9.2"
-# textual-terminal = "^0.3.0"
 typer = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
-ruff = "^0.0.270"
+ruff = "^0.0.290"
+textual-dev = "^1.1.0"
 
 [tool.ruff]
 line-length = 120
